--- a/This is Jeopardy.ipynb
+++ b/This is Jeopardy.ipynb
@@ -74,13 +74,416 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Solution"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "### Importing pandas and using the above code\n",
     "import pandas as pd\n",
     "pd.set_option('display.max_colwidth', None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Show Number</th>\n",
+       "      <th>Air Date</th>\n",
+       "      <th>Round</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Value</th>\n",
+       "      <th>Question</th>\n",
+       "      <th>Answer</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4680</td>\n",
+       "      <td>2004-12-31</td>\n",
+       "      <td>Jeopardy!</td>\n",
+       "      <td>HISTORY</td>\n",
+       "      <td>$200</td>\n",
+       "      <td>For the last 8 years of his life, Galileo was under house arrest for espousing this man's theory</td>\n",
+       "      <td>Copernicus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4680</td>\n",
+       "      <td>2004-12-31</td>\n",
+       "      <td>Jeopardy!</td>\n",
+       "      <td>ESPN's TOP 10 ALL-TIME ATHLETES</td>\n",
+       "      <td>$200</td>\n",
+       "      <td>No. 2: 1912 Olympian; football star at Carlisle Indian School; 6 MLB seasons with the Reds, Giants &amp; Braves</td>\n",
+       "      <td>Jim Thorpe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4680</td>\n",
+       "      <td>2004-12-31</td>\n",
+       "      <td>Jeopardy!</td>\n",
+       "      <td>EVERYBODY TALKS ABOUT IT...</td>\n",
+       "      <td>$200</td>\n",
+       "      <td>The city of Yuma in this state has a record average of 4,055 hours of sunshine each year</td>\n",
+       "      <td>Arizona</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4680</td>\n",
+       "      <td>2004-12-31</td>\n",
+       "      <td>Jeopardy!</td>\n",
+       "      <td>THE COMPANY LINE</td>\n",
+       "      <td>$200</td>\n",
+       "      <td>In 1963, live on \"The Art Linkletter Show\", this company served its billionth burger</td>\n",
+       "      <td>McDonald's</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4680</td>\n",
+       "      <td>2004-12-31</td>\n",
+       "      <td>Jeopardy!</td>\n",
+       "      <td>EPITAPHS &amp; TRIBUTES</td>\n",
+       "      <td>$200</td>\n",
+       "      <td>Signer of the Dec. of Indep., framer of the Constitution of Mass., second President of the United States</td>\n",
+       "      <td>John Adams</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Show Number    Air Date      Round                         Category  Value  \\\n",
+       "0         4680  2004-12-31  Jeopardy!                          HISTORY   $200   \n",
+       "1         4680  2004-12-31  Jeopardy!  ESPN's TOP 10 ALL-TIME ATHLETES   $200   \n",
+       "2         4680  2004-12-31  Jeopardy!      EVERYBODY TALKS ABOUT IT...   $200   \n",
+       "3         4680  2004-12-31  Jeopardy!                 THE COMPANY LINE   $200   \n",
+       "4         4680  2004-12-31  Jeopardy!              EPITAPHS & TRIBUTES   $200   \n",
+       "\n",
+       "                                                                                                      Question  \\\n",
+       "0             For the last 8 years of his life, Galileo was under house arrest for espousing this man's theory   \n",
+       "1  No. 2: 1912 Olympian; football star at Carlisle Indian School; 6 MLB seasons with the Reds, Giants & Braves   \n",
+       "2                     The city of Yuma in this state has a record average of 4,055 hours of sunshine each year   \n",
+       "3                         In 1963, live on \"The Art Linkletter Show\", this company served its billionth burger   \n",
+       "4     Signer of the Dec. of Indep., framer of the Constitution of Mass., second President of the United States   \n",
+       "\n",
+       "       Answer  \n",
+       "0  Copernicus  \n",
+       "1  Jim Thorpe  \n",
+       "2     Arizona  \n",
+       "3  McDonald's  \n",
+       "4  John Adams  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### Importing the dataset into a DataFrame object for analysis\n",
+    "jeopardy_df = pd.read_csv('jeopardy.csv')\n",
+    "jeopardy_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The instructions say that something is odd with regards to the column names. I took that to mean it may be cumbersome to complete my analysis using column names in the `.title()` string format. I originally attempted to format the column names to `column_name` formating using the following code:\n",
+    "\n",
+    "```\n",
+    "jeopardy_df.rename(columns = {\"Show Number\": \"show_number\",\n",
+    "                              \"Air Date\": 'air_date',\n",
+    "                              ..., inplace = True})\n",
+    "```\n",
+    "\n",
+    "When I printed the above altered DataFrame object, I noticed that only the \"Show Number\" column had done what I expected. Further investigation revealed leading white space, hence the failure of my code to produce what I wanted. I will correct this by doing the following:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>show_number</th>\n",
+       "      <th>air_date</th>\n",
+       "      <th>round</th>\n",
+       "      <th>category</th>\n",
+       "      <th>value</th>\n",
+       "      <th>question</th>\n",
+       "      <th>answer</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4680</td>\n",
+       "      <td>2004-12-31</td>\n",
+       "      <td>Jeopardy!</td>\n",
+       "      <td>HISTORY</td>\n",
+       "      <td>$200</td>\n",
+       "      <td>For the last 8 years of his life, Galileo was under house arrest for espousing this man's theory</td>\n",
+       "      <td>Copernicus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4680</td>\n",
+       "      <td>2004-12-31</td>\n",
+       "      <td>Jeopardy!</td>\n",
+       "      <td>ESPN's TOP 10 ALL-TIME ATHLETES</td>\n",
+       "      <td>$200</td>\n",
+       "      <td>No. 2: 1912 Olympian; football star at Carlisle Indian School; 6 MLB seasons with the Reds, Giants &amp; Braves</td>\n",
+       "      <td>Jim Thorpe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4680</td>\n",
+       "      <td>2004-12-31</td>\n",
+       "      <td>Jeopardy!</td>\n",
+       "      <td>EVERYBODY TALKS ABOUT IT...</td>\n",
+       "      <td>$200</td>\n",
+       "      <td>The city of Yuma in this state has a record average of 4,055 hours of sunshine each year</td>\n",
+       "      <td>Arizona</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4680</td>\n",
+       "      <td>2004-12-31</td>\n",
+       "      <td>Jeopardy!</td>\n",
+       "      <td>THE COMPANY LINE</td>\n",
+       "      <td>$200</td>\n",
+       "      <td>In 1963, live on \"The Art Linkletter Show\", this company served its billionth burger</td>\n",
+       "      <td>McDonald's</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4680</td>\n",
+       "      <td>2004-12-31</td>\n",
+       "      <td>Jeopardy!</td>\n",
+       "      <td>EPITAPHS &amp; TRIBUTES</td>\n",
+       "      <td>$200</td>\n",
+       "      <td>Signer of the Dec. of Indep., framer of the Constitution of Mass., second President of the United States</td>\n",
+       "      <td>John Adams</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   show_number    air_date      round                         category value  \\\n",
+       "0         4680  2004-12-31  Jeopardy!                          HISTORY  $200   \n",
+       "1         4680  2004-12-31  Jeopardy!  ESPN's TOP 10 ALL-TIME ATHLETES  $200   \n",
+       "2         4680  2004-12-31  Jeopardy!      EVERYBODY TALKS ABOUT IT...  $200   \n",
+       "3         4680  2004-12-31  Jeopardy!                 THE COMPANY LINE  $200   \n",
+       "4         4680  2004-12-31  Jeopardy!              EPITAPHS & TRIBUTES  $200   \n",
+       "\n",
+       "                                                                                                      question  \\\n",
+       "0             For the last 8 years of his life, Galileo was under house arrest for espousing this man's theory   \n",
+       "1  No. 2: 1912 Olympian; football star at Carlisle Indian School; 6 MLB seasons with the Reds, Giants & Braves   \n",
+       "2                     The city of Yuma in this state has a record average of 4,055 hours of sunshine each year   \n",
+       "3                         In 1963, live on \"The Art Linkletter Show\", this company served its billionth burger   \n",
+       "4     Signer of the Dec. of Indep., framer of the Constitution of Mass., second President of the United States   \n",
+       "\n",
+       "       answer  \n",
+       "0  Copernicus  \n",
+       "1  Jim Thorpe  \n",
+       "2     Arizona  \n",
+       "3  McDonald's  \n",
+       "4  John Adams  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columns = jeopardy_df.columns.to_list()\n",
+    "jeopardy_df.rename(columns = {column:column.lower().strip().replace(\" \",\"_\") for column in columns}, inplace = True)\n",
+    "jeopardy_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I notice that the `value` column contains strings due to the the presence of the leading $\\$$. I will remove the $\\$$ and transform the values to floats for analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>show_number</th>\n",
+       "      <th>air_date</th>\n",
+       "      <th>round</th>\n",
+       "      <th>category</th>\n",
+       "      <th>value</th>\n",
+       "      <th>question</th>\n",
+       "      <th>answer</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4680</td>\n",
+       "      <td>2004-12-31</td>\n",
+       "      <td>Jeopardy!</td>\n",
+       "      <td>HISTORY</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>For the last 8 years of his life, Galileo was under house arrest for espousing this man's theory</td>\n",
+       "      <td>Copernicus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4680</td>\n",
+       "      <td>2004-12-31</td>\n",
+       "      <td>Jeopardy!</td>\n",
+       "      <td>ESPN's TOP 10 ALL-TIME ATHLETES</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>No. 2: 1912 Olympian; football star at Carlisle Indian School; 6 MLB seasons with the Reds, Giants &amp; Braves</td>\n",
+       "      <td>Jim Thorpe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4680</td>\n",
+       "      <td>2004-12-31</td>\n",
+       "      <td>Jeopardy!</td>\n",
+       "      <td>EVERYBODY TALKS ABOUT IT...</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>The city of Yuma in this state has a record average of 4,055 hours of sunshine each year</td>\n",
+       "      <td>Arizona</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4680</td>\n",
+       "      <td>2004-12-31</td>\n",
+       "      <td>Jeopardy!</td>\n",
+       "      <td>THE COMPANY LINE</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>In 1963, live on \"The Art Linkletter Show\", this company served its billionth burger</td>\n",
+       "      <td>McDonald's</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4680</td>\n",
+       "      <td>2004-12-31</td>\n",
+       "      <td>Jeopardy!</td>\n",
+       "      <td>EPITAPHS &amp; TRIBUTES</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>Signer of the Dec. of Indep., framer of the Constitution of Mass., second President of the United States</td>\n",
+       "      <td>John Adams</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   show_number    air_date      round                         category  value  \\\n",
+       "0         4680  2004-12-31  Jeopardy!                          HISTORY  200.0   \n",
+       "1         4680  2004-12-31  Jeopardy!  ESPN's TOP 10 ALL-TIME ATHLETES  200.0   \n",
+       "2         4680  2004-12-31  Jeopardy!      EVERYBODY TALKS ABOUT IT...  200.0   \n",
+       "3         4680  2004-12-31  Jeopardy!                 THE COMPANY LINE  200.0   \n",
+       "4         4680  2004-12-31  Jeopardy!              EPITAPHS & TRIBUTES  200.0   \n",
+       "\n",
+       "                                                                                                      question  \\\n",
+       "0             For the last 8 years of his life, Galileo was under house arrest for espousing this man's theory   \n",
+       "1  No. 2: 1912 Olympian; football star at Carlisle Indian School; 6 MLB seasons with the Reds, Giants & Braves   \n",
+       "2                     The city of Yuma in this state has a record average of 4,055 hours of sunshine each year   \n",
+       "3                         In 1963, live on \"The Art Linkletter Show\", this company served its billionth burger   \n",
+       "4     Signer of the Dec. of Indep., framer of the Constitution of Mass., second President of the United States   \n",
+       "\n",
+       "       answer  \n",
+       "0  Copernicus  \n",
+       "1  Jim Thorpe  \n",
+       "2     Arizona  \n",
+       "3  McDonald's  \n",
+       "4  John Adams  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dollar_sign_removal = lambda value: float(value.strip('$').replace(\",\", \"\")) if value != 'None' else None\n",
+    "\n",
+    "jeopardy_df.value = jeopardy_df.value.apply(dollar_sign_removal)\n",
+    "jeopardy_df.head()"
    ]
   },
   {
@@ -212,7 +615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
