--- a/This is Jeopardy.ipynb
+++ b/This is Jeopardy.ipynb
@@ -77,12 +77,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Solution"
+    "### 1.Solution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "4  John Adams  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "4  John Adams  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
        "4  John Adams  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,10 +497,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 33,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "51\n"
+     ]
+    }
+   ],
+   "source": [
+    "def question_filter(df, filter_key):\n",
+    "    '''\n",
+    "    This function will filter the input dataframe\n",
+    "    by questions containing the word or words in\n",
+    "    the filter_key.\n",
+    "    '''\n",
+    "    if (type(filter_key) == str) or (type(filter_key) == list):\n",
+    "        if (type(filter_key) == list):\n",
+    "            filter_lambda = lambda question: True if all(\" \" + word.lower() + \" \" in question.lower() for word in filter_key) else False\n",
+    "            df['passes_filter'] = df.question.apply(filter_lambda)\n",
+    "            filtered_df = df[df.passes_filter == True].drop(columns = 'passes_filter')\n",
+    "            return filtered_df\n",
+    "        elif (type(filter_key) == str):\n",
+    "            filter_lambda = lambda question: True if \" \" + filter_key.lower() + \" \" in question.lower() else False\n",
+    "            df['passes_filter'] = df.question.apply(filter_lambda)\n",
+    "            filtered_df = df[df.passes_filter == True].drop(columns = 'passes_filter')\n",
+    "            return filtered_df\n",
+    "    else:\n",
+    "        raise TypeError('Invalid filter key type. Must be list or string.')\n",
+    "\n",
+    "king_england_df = question_filter(jeopardy_df, ['King', 'England'])\n",
+    "print(len(king_england_df))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -514,11 +547,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Completed above."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -532,11 +565,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Completed above."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -547,10 +580,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         answer  frequency\n",
+      "380  Henry VIII         31\n"
+     ]
+    }
+   ],
+   "source": [
+    "def counting_anwsers_w_filter(df, filter_key):\n",
+    "    '''\n",
+    "    This function will take the input dataframe,\n",
+    "    fitler it by questions containing the word or \n",
+    "    words in the filter_key and count the frequency\n",
+    "    of unique answers.\n",
+    "    '''\n",
+    "    filtered_df = question_filter(df, filter_key)\n",
+    "    answer_counts_df = filtered_df.groupby('answer').show_number.count().reset_index().rename(columns = {'show_number': 'frequency'})\n",
+    "    return answer_counts_df\n",
+    "\n",
+    "king_counts_df = counting_anwsers_w_filter(jeopardy_df, 'king')\n",
+    "print(king_counts_df[king_counts_df.frequency == king_counts_df.frequency.max()])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The question prompt says they saw \"Henry VIII\" appear 55 times. I found the same answer when removing the considerations in my `question_filter` function related to ensure I was only looking for each word. When removing this, and thus also considering not only the words within the filter and also words with filter key words inside them, I see \"Henry VIII\" appear 55. My code above now only considers answers to questions containing only the word(s) in the filter while ignoring questions with words containing the filter key words. "
+   ]
   },
   {
    "cell_type": "markdown",
