Added function to count a category for each round and made a quizz game

--- a/This is Jeopardy.ipynb
+++ b/This is Jeopardy.ipynb
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +815,7 @@
        "24  2012          3"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1050,7 @@
        "28  2012          9"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,6 +1058,107 @@
    "source": [
     "movie_time_df = question_theme_year(jeopardy_df, 'Movie')\n",
     "movie_time_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "round\n",
+       "Double Jeopardy!    381.0\n",
+       "Final Jeopardy!      10.0\n",
+       "Jeopardy!           105.0\n",
+       "Tiebreaker            NaN\n",
+       "Name: LITERATURE, dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def round_cat_analysis(df):\n",
+    "    '''\n",
+    "    This function will take an input dataframe\n",
+    "    and output a dataframe containing the\n",
+    "    frequency at which each category occurs.\n",
+    "    '''\n",
+    "    round_cat_df = df.groupby(['round', 'category']).show_number.count().reset_index().rename(columns = {'show_number': 'frequency'})\n",
+    "    round_cat_df = round_cat_df.pivot(index = 'category',\n",
+    "                      columns = 'round',\n",
+    "                      values = 'frequency')\n",
+    "    return round_cat_df\n",
+    "\n",
+    "round_cat_df = round_cat_analysis(jeopardy_df)\n",
+    "round_cat_df.loc['LITERATURE']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For 200.00 dollars, category is Presidential Creations:\n",
+      "This man whose wife was noted for her taste & elegance set up the President's Advisory Council on the Arts\n",
+      "Jimmy Carter\n",
+      "I'm sorry. The correct answer is Kennedy. You now have -200.0 dollars.\n",
+      "\n",
+      "For 300.00 dollars, category is The Position Played:\n",
+      "Randy Johnson, Roger Clemens, Greg Maddux\n",
+      "Pitcher\n",
+      "That's correct! You now have 100.0 dollars.\n",
+      "\n",
+      "For 1200.00 dollars, category is Holy ____!:\n",
+      "In \"Le Morte d'Arthur\", a gathering of knights saw a vision of this\n",
+      "Grail\n",
+      "I'm sorry. The correct answer is the (Holy) Grail. You now have -1100.0 dollars.\n",
+      "\n",
+      "For 800.00 dollars, category is Heart-Felt Words:\n",
+      "This medical type of \"arrest\" is sudden loss of heart function\n",
+      "Cardiac\n",
+      "That's correct! You now have -300.0 dollars.\n",
+      "\n",
+      "For 800.00 dollars, category is Dodger:\n",
+      "In 1981 this Dodger pitcher nicknamed \"El Toro\" won the Rookie of the Year & Cy Young awards\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def quizz_game(df, num_questions):\n",
+    "    '''\n",
+    "    This function makes a quizz from the jeopardy questions.\n",
+    "    '''\n",
+    "    total = 0\n",
+    "    for i in range(num_questions):\n",
+    "        question_index = np.random.randint(0, len(jeopardy_df))\n",
+    "        question_data = jeopardy_df.iloc[question_index]\n",
+    "        value = question_data['value']\n",
+    "        question = question_data['question']\n",
+    "        print(\"For {value:.2f} dollars, category is {cat}:\\n{question}\".format(value = value, cat = question_data['category'].title(), question = question))\n",
+    "        answer = input()\n",
+    "        if answer.lower() == question_data['answer'].lower():\n",
+    "            total += value\n",
+    "            print('That\\'s correct! You now have {total} dollars.\\n'.format(total = total))\n",
+    "        else:\n",
+    "            total -= value\n",
+    "            print('I\\'m sorry. The correct answer is {answer}. You now have {total} dollars.\\n'.format(answer = question_data['answer'], total = total))\n",
+    "    if total > 0:\n",
+    "        print('Well done! You finished the game with {total}!'.format(total = total))\n",
+    "    else:\n",
+    "        print('I\\'m sorry. You finished the game with {total}. Some further study is required.'.format(total = total))\n",
+    "\n",
+    "quizz_game(jeopardy_df, 5)"
    ]
   },
   {
