--- a/This is Jeopardy.ipynb
+++ b/This is Jeopardy.ipynb
@@ -1100,44 +1100,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For 200.00 dollars, category is Presidential Creations:\n",
-      "This man whose wife was noted for her taste & elegance set up the President's Advisory Council on the Arts\n",
-      "Jimmy Carter\n",
-      "I'm sorry. The correct answer is Kennedy. You now have -200.0 dollars.\n",
+      "For 1000.00 dollars, category is Also A Current Supreme Court Justice:\n",
+      "Mr. Hobbes or Mr. Malthus\n",
+      "Robert\n",
+      "I'm sorry. The correct answer is Thomas. You now have -1000.0 dollars.\n",
       "\n",
-      "For 300.00 dollars, category is The Position Played:\n",
-      "Randy Johnson, Roger Clemens, Greg Maddux\n",
-      "Pitcher\n",
-      "That's correct! You now have 100.0 dollars.\n",
+      "For 800.00 dollars, category is World History:\n",
+      "From 1849 to 1861, he ruled the kingdom of Sardinia\n",
+      "?\n",
+      "I'm sorry. The correct answer is Victor Emmanuel. You now have -1800.0 dollars.\n",
       "\n",
-      "For 1200.00 dollars, category is Holy ____!:\n",
-      "In \"Le Morte d'Arthur\", a gathering of knights saw a vision of this\n",
-      "Grail\n",
-      "I'm sorry. The correct answer is the (Holy) Grail. You now have -1100.0 dollars.\n",
+      "For 1600.00 dollars, category is Disturbing The \"P\"S:\n",
+      "It's the city where you'll find the main campus of the University of South Africa\n",
+      "?\n",
+      "I'm sorry. The correct answer is Pretoria. You now have -3400.0 dollars.\n",
       "\n",
-      "For 800.00 dollars, category is Heart-Felt Words:\n",
-      "This medical type of \"arrest\" is sudden loss of heart function\n",
-      "Cardiac\n",
-      "That's correct! You now have -300.0 dollars.\n",
+      "For 300.00 dollars, category is Play Revivals:\n",
+      "He starred on Broadway in \"The Crucible\" in 1991, a few years before becoming president (on TV, that is)\n",
+      "Martin Scheen\n",
+      "I'm sorry. The correct answer is Martin Sheen. You now have -3700.0 dollars.\n",
       "\n",
-      "For 800.00 dollars, category is Dodger:\n",
-      "In 1981 this Dodger pitcher nicknamed \"El Toro\" won the Rookie of the Year & Cy Young awards\n"
+      "For 1000.00 dollars, category is The New York Times Travel:\n",
+      "\"When to go\" to Australia? If it's summer (Dec.), try southern (cooler) states, like this one named for a queen\n",
+      "Victoria\n",
+      "That's correct! You now have -2700.0 dollars.\n",
+      "\n",
+      "I'm sorry. You finished the game with -2700.0. Some further study is required.\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "def quizz_game(df, num_questions):\n",
+    "def quiz_game(df, num_questions):\n",
     "    '''\n",
-    "    This function makes a quizz from the jeopardy questions.\n",
+    "    This function makes a quiz from the jeopardy questions.\n",
     "    '''\n",
     "    total = 0\n",
     "    for i in range(num_questions):\n",
@@ -1158,7 +1162,7 @@
     "    else:\n",
     "        print('I\\'m sorry. You finished the game with {total}. Some further study is required.'.format(total = total))\n",
     "\n",
-    "quizz_game(jeopardy_df, 5)"
+    "quiz_game(jeopardy_df, 5)"
    ]
   },
   {
