fixed typos in code.

--- a/This is Jeopardy.ipynb
+++ b/This is Jeopardy.ipynb
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +815,7 @@
        "24  2012          3"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1050,7 @@
        "28  2012          9"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,6 +1058,111 @@
    "source": [
     "movie_time_df = question_theme_year(jeopardy_df, 'Movie')\n",
     "movie_time_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "round\n",
+       "Double Jeopardy!    381.0\n",
+       "Final Jeopardy!      10.0\n",
+       "Jeopardy!           105.0\n",
+       "Tiebreaker            NaN\n",
+       "Name: LITERATURE, dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def round_cat_analysis(df):\n",
+    "    '''\n",
+    "    This function will take an input dataframe\n",
+    "    and output a dataframe containing the\n",
+    "    frequency at which each category occurs.\n",
+    "    '''\n",
+    "    round_cat_df = df.groupby(['round', 'category']).show_number.count().reset_index().rename(columns = {'show_number': 'frequency'})\n",
+    "    round_cat_df = round_cat_df.pivot(index = 'category',\n",
+    "                      columns = 'round',\n",
+    "                      values = 'frequency')\n",
+    "    return round_cat_df\n",
+    "\n",
+    "round_cat_df = round_cat_analysis(jeopardy_df)\n",
+    "round_cat_df.loc['LITERATURE']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For 1000.00 dollars, category is Also A Current Supreme Court Justice:\n",
+      "Mr. Hobbes or Mr. Malthus\n",
+      "Robert\n",
+      "I'm sorry. The correct answer is Thomas. You now have -1000.0 dollars.\n",
+      "\n",
+      "For 800.00 dollars, category is World History:\n",
+      "From 1849 to 1861, he ruled the kingdom of Sardinia\n",
+      "?\n",
+      "I'm sorry. The correct answer is Victor Emmanuel. You now have -1800.0 dollars.\n",
+      "\n",
+      "For 1600.00 dollars, category is Disturbing The \"P\"S:\n",
+      "It's the city where you'll find the main campus of the University of South Africa\n",
+      "?\n",
+      "I'm sorry. The correct answer is Pretoria. You now have -3400.0 dollars.\n",
+      "\n",
+      "For 300.00 dollars, category is Play Revivals:\n",
+      "He starred on Broadway in \"The Crucible\" in 1991, a few years before becoming president (on TV, that is)\n",
+      "Martin Scheen\n",
+      "I'm sorry. The correct answer is Martin Sheen. You now have -3700.0 dollars.\n",
+      "\n",
+      "For 1000.00 dollars, category is The New York Times Travel:\n",
+      "\"When to go\" to Australia? If it's summer (Dec.), try southern (cooler) states, like this one named for a queen\n",
+      "Victoria\n",
+      "That's correct! You now have -2700.0 dollars.\n",
+      "\n",
+      "I'm sorry. You finished the game with -2700.0. Some further study is required.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def quiz_game(df, num_questions):\n",
+    "    '''\n",
+    "    This function makes a quiz from the jeopardy questions.\n",
+    "    '''\n",
+    "    total = 0\n",
+    "    for i in range(num_questions):\n",
+    "        question_index = np.random.randint(0, len(jeopardy_df))\n",
+    "        question_data = jeopardy_df.iloc[question_index]\n",
+    "        value = question_data['value']\n",
+    "        question = question_data['question']\n",
+    "        print(\"For {value:.2f} dollars, category is {cat}:\\n{question}\".format(value = value, cat = question_data['category'].title(), question = question))\n",
+    "        answer = input()\n",
+    "        if answer.lower() == question_data['answer'].lower():\n",
+    "            total += value\n",
+    "            print('That\\'s correct! You now have {total} dollars.\\n'.format(total = total))\n",
+    "        else:\n",
+    "            total -= value\n",
+    "            print('I\\'m sorry. The correct answer is {answer}. You now have {total} dollars.\\n'.format(answer = question_data['answer'], total = total))\n",
+    "    if total > 0:\n",
+    "        print('Well done! You finished the game with {total}!'.format(total = total))\n",
+    "    else:\n",
+    "        print('I\\'m sorry. You finished the game with {total}. Some further study is required.'.format(total = total))\n",
+    "\n",
+    "quiz_game(jeopardy_df, 5)"
    ]
   },
   {
